<resources>
    <string name="app_name">Vocably</string>
    <string name="necesary_update">WYMAGANA AKTUALIZACJA</string>
    <string name="version">Wersja 1.0.1</string>
    <string name="version_tracker_update">Aby kontynuować, zaktualizuj aplikację do najnowszej wersji.</string>
    <string name="version_tracker_new">CO NOWEGO</string>
    <string name="version_tracker_update_now">AKTUALIZUJ TERAZ</string>
    <string name="version_tracker_key">Klucz dostępu</string>
    <string name="ok">OK</string>
    <string name="version_update_bypass_error">Błąd wersji</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="greetings">Witaj w Vocably.\n\nNauka słówek z podręczników\nprzez fiszki, quizy\ni interaktywne tryby.</string>
    <string name="btn_start">Zaczynamy</string>
    <string name="btn_login">Zaloguj się</string>
    <string name="btn_register">Zarejestruj się</string>
    <string name="toggle_to_register">Nie masz konta? Zarejestruj się</string>
    <string name="toggle_to_login">Masz już konto? Zaloguj się</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Hasło</string>
    <string name="error_fill_fields">Uzupełnij email i hasło</string>
    <string name="error_login">Błąd logowania: </string>
    <string name="error_register">Błąd rejestracji: </string>
    <string name="hint_password_repeat">Powtórz hasło</string>
    <string name="error_passwords_not_match">Hasła nie są identyczne</string>
    <string name="home_language">JĘZYK</string>
    <string name="home_english">Angielski</string>
    <string name="home_german">Niemiecki</string>
    <string name="home_recent_books">OSTATNIE KSIĄŻKI</string>
    <string name="home_no_recent">Brak ostatnio otwartych książek</string>

    <string name="home_units">ROZDZIAŁY</string>
    <string name="home_start">Dalej</string>
    <string name="dir_lang_to_polish">Język → Polski</string>
    <string name="dir_polish_to_lang">Polski → Język</string>
    <string name="dir_random">Losowo</string>
    <string name="home_sections">ROZDZIAŁY</string>
    <string name="home_quiz_mode">TRYB NAUKI</string>
    <string name="home_books">PODRĘCZNIK</string>
</resources>